# babeltron

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.with-model  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  prometheus.yml  pyproject.toml  pytest.ini  recovered_download_models.py
.github/badges/: version.json
.github/workflows/: build-push-model-image.yml  build.yml  main.yml  publish-docker.yml  publish-image-with-model.yml  publish.yml  pull_request.yml  release.yml  test.yml  update-version-badge.yml
babeltron/: __init__.py  version.py
babeltron/app/: config.py  main.py  monitoring.py  tracing.py  utils.py
babeltron/app/cache/: base.py  service.py  utils.py  valkey.py
babeltron/app/middlewares/: auth.py
babeltron/app/models/: __init__.py  base.py  factory.py  m2m.py  m2m100.py  nllb.py
babeltron/app/models/detection/: base.py  factory.py  lingua.py
babeltron/app/models/translation/: base.py  factory.py  m2m100.py  nllb.py
babeltron/app/routers/: detect.py  healthcheck.py  translate.py
babeltron/scripts/: download_models.py
docs/: Architecture.md  CONTRIBUTING.md
etc/: jaeger-sampling.json  otel-collector-config.yaml
scripts/: test-model-container.sh
tests/: conftest.py
tests/mocks/: opentelemetry.py  opentelemetry_mock.py
tests/unit/app/: test_main.py  test_monitoring.py  test_utils.py
tests/unit/app/cache/: __init__.py  test_service.py  test_utils.py  test_valkey.py
tests/unit/app/middlewares/: test_auth.py
tests/unit/app/models/: test_factory.py  test_m2m.py  test_m2m100.py  test_nllb.py
tests/unit/app/models/detection/: test_factory.py  test_lingua.py
tests/unit/app/models/translation/: test_factory.py  test_m2m100.py  test_nllb.py
tests/unit/app/routers/: test_cache_integration.py  test_detect.py  test_healthcheck.py  test_translate.py
tests/unit/scripts/: test_download_models.py
