[tool.poetry]
name = "babeltron"
version = "0.1.0"
description = "A Python-based REST API that leverages single multilingual models like mBERT to provide efficient text translation services"
authors = ["Pedro Soares <pedrofigueiredoc@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/hspedro/babeltron"
packages = [{include = "babeltron"}]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.0.0"
torchserve = "^0.8.0"
torch-model-archiver = "^0.8.0"
transformers = "^4.30.0"
sentencepiece = "^0.1.99"
grpcio = "^1.54.0"
grpcio-tools = "^1.54.0"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
pytest-cov = "^4.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
pytest-cov = "^4.1.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest]
testpaths = ["tests/unit"]
python_files = "test_*.py"
python_functions = "test_*"

[tool.coverage.run]
source = ["babeltron"]
omit = ["tests/*"]
